# jniHttp

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  web_task.cpp  web_task.h
app/src/main/java/com/ldlywt/jnihttp/: App.kt  DataMMkv.kt  HttpCodeImpl.kt  HttpConfig.kt  HttpConnectionBean.kt  HttpConnectionImpl.kt  HttpConnections.kt  HttpRequest.kt  JsonBean.kt  MainActivity.java  SpUtil.kt
gradle/wrapper/: gradle-wrapper.properties
